--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,6 +1,7 @@
 body {
  margin: 0;
  text-align:center;
+ font-family: 'Merriweather', serif;
 }
 
 div {
@@ -9,6 +10,11 @@ div {
 
 h1 {
  margin: 0;
+ font-family: 'Sacramento', cursive;
+}
+
+h2,h3{
+ font-family: 'Montserrat', sans-serif;
 }
 
 .top-container{
@@ -23,8 +29,16 @@ h1 {
 .bottom-container {
  background-color: red;
  height: 200px;
- width: 200px;
+ width: 200px; 
 }
 .soft{
  text-decoration:underline;
+}
+
+.bottom-cloud{
+ position:absolute;
+}
+.top-cloud{
+ position:relative;
+ left:200px
 }
