--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -9,27 +9,24 @@ div {
 }
 
 h1 {
- margin: 0;
- font-family: 'Sacramento', cursive;
+ margin: 50px auto 0 auto;
+ font-family: 'Sacramento', cursive; 
+ font-size: 5.625rem;
 }
 
 h2,h3{
  font-family: 'Montserrat', sans-serif;
+ /* font-size: 2.5rem; */
+ font-weight: 500;
 }
 
 .top-container{
  padding: 20px;
 }
 .middle-container {
- background-color: blue;
- height: 200px;
- width: 200px;
 }
 
 .bottom-container {
- background-color: red;
- height: 200px;
- width: 200px; 
 }
 .soft{
  text-decoration:underline;
